[package]
name = "cuda-neurotransmitter"
version = "0.1.0"
edition = "2021"
description = "Receptors, synapses, and cascades"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-neurotransmitter"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

